--- a/index.html
+++ b/index.html
@@ -13,17 +13,70 @@
       <td>
         <h1>Garvin Chan</h1>
         <p><em>Bachelor of Science in Computer Science at Northeastern University</em></p>
-        <p>I am a Computer Science student at <a href="https://www.khoury.northeastern.edu/" target="_blank">Khoury College of Computer Sciences.</a></p>
+        <p>I am a second student at <a href="https://www.khoury.northeastern.edu/" target="_blank">Khoury College of Computer Sciences</a> at Northeastern University with a minor in Film Production.
+          I am interested in Software Development, Web Developement, and Artificial Intelligence. </p>
+        <p><a href="#contact">Contact Information</a></p>
       </td>
     </tr>
   </table>
-
   <hr>
   <h3>Education</h3>
+
+  <strong>Northeastern University (2021-2025)</strong>
   <ul>
-    <li>Northeastern University (2021-2025)</li>
-    <li>Victoria Shanghai Academy (2018-2021)</li>
+    <li>Bachelor of Science in Computer Science</li>
+    <li><strong>Awards: </strong>Dean's List (May 2022)</li>
+    <li><strong>Activities: </strong>Scout (Northeastern); Hong Kong Student Association (Executive Board Member); Code4Community</li>
+    <li><strong>Relevant Coursework: </strong>Object-Oriented Design; Algorithms & Data; Fundamentals of Computer Science I & II; Foundations of Cybersecurity; Discrete Mathematics</li>
   </ul>
+
+  <strong>Victoria Shanghai Academy (2018-2021)</strong>
+  <ul>
+    <li>The International Baccalaureate® (IB) Diploma Programme</li>
+    <li><strong>Awards: </strong>Academic Excellence Scholarship (2019)</li>
+    <li><strong>Activities: </strong>Senior House Captain; Varsity Basketball Team (Captain); Committee of Athletics Council; Class Representatives of Student Government; Executive Board Member of Youth Basketball Club; President of Board Game Club;
+      Founding Member of Rocket Science Club;</li>
+    <li><strong>IB Higher Level Courses: </strong>Mathematics: analysis and approaches; Physics </li>
+  </ul>
+
+  <hr>
+  <h3>Projects</h3>
+  <a href="https://github.com/garvinec/Image-Processing" target="_blank"><strong>Image Processing Software (June 2022)</strong></a>
+  <ul>
+    <li>Developed a program in Java that could import, edit, and export various image types (jpg, png, bmp)</li>
+    <li>Editing features included adjusting brightness, flipping, adding color filters, and sharpening image</li>
+    <li>Implemented a GUI that allowed user interaction using JSwing and Java libraries</li>
+    <li>Followed command design pattern and the SOLID principles of Object-Oriented Design</li>
+  </ul>
+  <a href="https://github.com/garvinec/Marble-Solitaire-Game" target="_blank"><strong>Marble Solitaire Game (May 2022)</strong></a>
+  <ul>
+    <li>Developed a game in Java based on different versions of Peg Solitaire (English, European, Triangular)</li>
+    <li>Wrote clean Java code utilizing the Model-View-Controller architecture</li>
+  </ul>
+
+  <hr>
+
+  <h3>Technical Skills</h3>
+
+  <table cellspacing="10">
+    <tr>
+      <td>Java</td>
+      <td>⭐️⭐️⭐️⭐️⭐️</td>
+    </tr>
+    <tr>
+      <td>HTML</td>
+      <td>⭐️⭐️⭐️⭐️⭐️</td>
+    </tr>
+    <tr>
+      <td>Python</td>
+      <td>⭐️⭐️</td>
+    </tr>
+    <tr>
+      <td>Racket</td>
+      <td>⭐️⭐️⭐️⭐️</td>
+    </tr>
+  </table>
+
   <hr>
   <h3>Work Experience</h3>
   <table cellspacing="10">
@@ -34,38 +87,27 @@
       </tr>
     </thead>
     <tr>
+      <td>2022</td>
+      <td>Videographer for Scout</td>
+    </tr>
+    <tr>
+      <td>2022 - Present</td>
+      <td>Executive Board Member of Hong Kong Student Association</td>
+    </tr>
+    <tr>
       <td>2019-2021</td>
       <td>Photographer for Photo4Good</td>
     </tr>
-    <tr>
-      <td>2021</td>
-      <td>Something else</td>
-    </tr>
   </table>
   <hr>
-  <h3>Skills</h3>
 
-  <table cellspacing = "10">
-    <tr>
-      <td>Java</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>Python</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>Racket</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-  </table>
-
-
-  <hr>
-  <h3><a href="hobbies.html">My Hobbies</a></h3>
-  <h3><a href="contact-me.html">My Contacts</a></h3>
-
-
+  <h3><a name="contact">Contact Information</a></h3>
+  <address>Garvin Chan</address>
+  <address>Northeastern University</address>
+  <address>Boston, MA 02115</address>
+  <address>chan.gar@northeastern.edu</address>
+  <a href="https://github.com/garvinec" target="_blank"><strong>Github</strong></a>
+  <a href="https://www.linkedin.com/in/garvinec" target="_blank"><strong>Linkedin</strong></a>
 
 </body>
 
