--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
     <li>Developed a game in Java based on different versions of Peg Solitaire (English, European, Triangular)</li>
     <li>Wrote clean Java code utilizing the Model-View-Controller architecture</li>
   </ul>
+  <br>
+  <a href="https://github.com/garvinec" target="_blank"><strong>More Projects</strong></a>
 
   <hr>
 
