--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
   <ul>
     <li>Bachelor of Science in Computer Science</li>
     <li><strong>Awards: </strong>Dean's List (May 2022)</li>
-    <li><strong>Activities: </strong>Scout (Northeastern); Hong Kong Student Association (Executive Board Member); Code4Community</li>
-    <li><strong>Relevant Coursework: </strong>Object-Oriented Design; Algorithms & Data; Fundamentals of Computer Science I & II; Foundations of Cybersecurity; Discrete Mathematics</li>
+    <li><strong>Activities: </strong>Hong Kong Student Association (Executive Board Member); Code4Community</li>
+    <li><strong>Relevant Coursework: </strong>Object-Oriented Design; Algorithms & Data; Fundamentals of Computer Science I & II; Computer Systems; Foundations of Cybersecurity; Mathematics of Data Models; Discrete Mathematics</li>
   </ul>
 
   <strong>Victoria Shanghai Academy (2018-2021)</strong>
   <ul>
     <li>The International Baccalaureate® (IB) Diploma Programme</li>
     <li><strong>Awards: </strong>Academic Excellence Scholarship (2019)</li>
-    <li><strong>Activities: </strong>Senior House Captain; Varsity Basketball Team (Captain); Committee of Athletics Council; Class Representatives of Student Government; Executive Board Member of Youth Basketball Club; President of Board Game Club;
+    <li><strong>Activities: </strong>Senior House Captain; Varsity Basketball Team (Captain); Class Representatives of Student Government; President of Board Game Club;
       Founding Member of Rocket Science Club;</li>
-    <li><strong>IB Higher Level Courses: </strong>Mathematics: analysis and approaches; Physics </li>
+    <li><strong>IB Higher Level Courses: </strong>Mathematics: analysis and approaches; Physics; Business Management </li>
   </ul>
 
   <hr>
@@ -53,31 +53,15 @@
     <li>Developed a game in Java based on different versions of Peg Solitaire (English, European, Triangular)</li>
     <li>Wrote clean Java code utilizing the Model-View-Controller architecture</li>
   </ul>
+  <br>
+  <a href="https://github.com/garvinec" target="_blank"><strong>More Projects</strong></a>
 
   <hr>
 
   <h3>Technical Skills</h3>
-
-  <table cellspacing="10">
-    <tr>
-      <td>Java</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>HTML</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>Python</td>
-      <td>⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>Racket</td>
-      <td>⭐️⭐️⭐️⭐️</td>
-    </tr>
-  </table>
-
+  Java | HTML | CSS | Javascript | C | Python | Racket | Assembly
   <hr>
+
   <h3>Work Experience</h3>
   <table cellspacing="10">
     <thead>
